Fixed tabs/spacing Moved logo to middle of page General prettiness improvements

--- a/public/css/mailing-list.css
+++ b/public/css/mailing-list.css
@@ -31,3 +31,12 @@ body > .content-container {
   height: 100%;
   margin-top: -150px !important;
 }
+
+.content-container .segment {
+	background: rgba(255,255,255,0.2);
+	border: none !important;
+}
+
+.content-container .form label {
+	font-size: 1.2em !important;
+}
